Fix some layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
-/* Ocean Blue Serenity - https://coolors.co/03045e-023e8a-0077b6-0096c7-00b4d8-48cae4-90e0ef-ade8f4-caf0f8 */
-:root {
-    --federal-blue: #03045eff;
-    --marian-blue: #023e8aff;
-    --honolulu-blue: #0077b6ff;
-    --blue-green: #0096c7ff;
-    --pacific-cyan: #00b4d8ff;
-    --vivid-sky-blue: #48cae4ff;
-    --non-photo-blue: #90e0efff;
-    --non-photo-blue-2: #ade8f4ff;
-    --light-cyan: #caf0f8ff;
-}
-
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: var(--light-cyan);
-    /* background-color: #f0f4f8; */
+    background-color: #f0f4f8;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -34,6 +20,19 @@ body {
     flex: 1;
     margin-top: 7dvh;
     padding: 20px;
+}
+
+.brand-name {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: rgb(0, 92, 137);
+    text-decoration: none;
+}
+
+.welcome-text {
+    text-align: center;
+    font-size: 25px;
 }
 
 footer {
@@ -67,9 +66,9 @@ footer {
 
 .nav-bar {
     display: flex;
-    align-items: center;
+    margin: auto;
     width: 100%;
-    height: 7dvh;
+    height: 50px;
     z-index: 1002;
 }
 
@@ -84,20 +83,26 @@ footer {
 }
 
 .nav-brand-logo {
-    height: 25px;
-    width: 25px;
+    height: 36px;
+    margin-top: 2px;
     border-radius: 8px;
-}
-
-.nav-brand-link {
-    text-decoration: inherit;
-    color: inherit;
+    align-self: center;
+    object-fit: scale-down;
 }
 
 .nav-brand-name {
     text-decoration: inherit;
     font-size: 1.4rem;
     color: rgb(2, 119, 178);
+}
+
+.bn-hub {
+    color: rgb(241, 251, 255);
+    background-color: rgb(1, 107, 159);
+    border: rgb(1, 107, 159) 2px solid;
+    border-radius: 6px;
+    margin-left: 2px;
+    padding: 0 1px 0 1px;
 }
 
 .nav-links-container {
@@ -831,60 +836,31 @@ form p a {
 /* ================================= */
 /* =========== Help Page =========== */
 /* ================================= */
-.box {
-    max-width: 2000px;
+.help-container {
+    max-width: 70%;
     padding: 5px;
     border-radius: 3px;
-    background-color: purple;
-    text-align: center;
+    margin: auto;
 }
 
 .help-section {
+    padding: 20px 40px;
     background-color: white;
     border-radius: 10px;
-    margin-bottom: 10px;
     font-size: 18px;
-    padding: 20px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     margin: 20px auto;
 }
 
+.help-section p:not(.welcome-text) {
+    font-style: italic;
+    font-weight: 700;
+
+}
+
 .step {
     font-size: 18px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: 18px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    background-color: grey;
-}
-
-h7 {
-    font-size: 26px;
-    color: #800080;
-    font-weight: bold;
-    margin-bottom: 15px;
-    display: block;
-}
-
-
-h8 {
-    font-size: 24px;
-    color: black;
-    font-weight: bold;
-    display: block;
-}
-
-h9 {
-    font-size: 25px;
-    color: brown;
+    margin: 20px 40px;
 }
 
 summary {
@@ -892,6 +868,7 @@ summary {
     background: #f1f3f6;
     transition: 0.3s;
     padding: 10px;
+    margin: 10px auto;
     border-radius: 5px;
     font-weight: bold;
 }
@@ -923,15 +900,15 @@ summary.highlight {
 
 
 .contact-us-form {
-    margin-top: 20px;
+    margin: 20px 10px;
 }
 
 .contact-us-input {
     margin-bottom: 15px;
 }
 
-.contact-us-input input,
-.contact-us-input textarea {
+.contact-us-input table tr td input, 
+.contact-us-input table tr td textarea {
     width: 100%;
     padding: 12px;
     border-radius: 8px;
@@ -940,7 +917,7 @@ summary.highlight {
 
 .contact-submit-button {
     cursor: pointer;
-    background-color: red;
+    background-color: rgb(0, 119, 179);
     color: white;
     border-radius: 8px;
     border: none;
@@ -949,9 +926,13 @@ summary.highlight {
     padding: 12px;
 }
 
+.contact-submit-button:hover {
+    background-color: rgb(0, 92, 137);
+    transition: 0.3s ease;
+}
+
 .contact_info {
-    margin-top: 20px;
-    padding: 15px;
+    padding: 25px 40px 10px;
     background-color: #deb887;
     border-radius: 8px;
     border-left: 4px solid #ff4b2b;
